[package]
authors = ["Jiangqiu Shen"]
description = "A command line tool to edit id3 tags of mp3/m4a files"
edition = "2021"
license = "MIT"
name = "id3util"
version = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive", "color"] }
clap_complete = "4.0.2"
id3 = "1.3.0"
mp4ameta = "0.11.0"
rayon = "1.5.3"
regex = "1.6.0"
